--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,31 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="root"></div>
+    <div class="container">
+      <div class="header clearfix">
+        <nav>
+          <ul class="nav nav-pills float-right">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Transactions <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Send</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Receive</a>
+            </li>
+          </ul>
+        </nav>
+        <h3 class="text-muted">Snake coins wallet</h3>
+      </div>
+
+      <div id="root"></div>
+
+      <footer class="footer">
+        <p>© Company 2017</p>
+      </footer>
+
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
